# wxocto

./: .gitignore  CMakeLists.txt  MainApp.cpp  MainApp.h  MainWindow.cpp  MainWindow.h  MainWindowBase.cpp  MainWindowBase.h  Windows.wxcp  docker-compose.yaml  extractText.sh  helper.h  main.cpp  main.rc  ucm.cmake  wxocto.xpm
building/cmake/: mingw-w64-x86_64.cmake  ucm.cmake
building/conan/: linux_to_win64_conan
building/docker/: Dockerfile.ubuntu  Dockerfile.ubuntu.mingw  build-in-docker-mingw.sh  build-in-docker-ubuntu.sh
de/: wxocto.mo  wxocto.po
mainwindow/: FileUploadDialog.cpp  FileUploadDialog.h  MainWindow.cpp  MainWindow.h  MainWindowBase.cpp  MainWindowBase.h
octoprint/: CancelPrintThread.cpp  CancelPrintThread.h  DeleteFileThread.cpp  DeleteFileThread.h  FetchFilesThread.cpp  FetchFilesThread.h  FetchPrintStatusThread.cpp  FetchPrintStatusThread.h  OctoApiEventIds.h  OctoprintFile.cpp  OctoprintFile.h  OctoprintJob.cpp  OctoprintJob.h  PausePrintThread.cpp  PausePrintThread.h  ResumePrintThread.cpp  ResumePrintThread.h  SelectAndPrintFileThread.cpp  SelectAndPrintFileThread.h  UploadFileThread.cpp  UploadFileThread.h  httpClient.cpp  httpClient.h
octoprint/spoolmanager/: DeleteSpoolThread.cpp  DeleteSpoolThread.h  FetchSpoolsThread.cpp  FetchSpoolsThread.h  OctoprintSpool.cpp  OctoprintSpool.h  OctoprintSpoolData.cpp  OctoprintSpoolData.h  SaveSpoolThread.cpp  SaveSpoolThread.h  SelectSpoolThread.cpp  SelectSpoolThread.h
settings/: OctoPrintServerSettingsPage.cpp  OctoPrintServerSettingsPage.h  OctoPrintServerSettingsPagePanel.cpp  OctoPrintServerSettingsPagePanel.h  wxOctoSettings.h
spoolmanager/: AddSpoolDialog.cpp  AddSpoolDialog.h  EditSpoolDialog.cpp  EditSpoolDialog.h  SpoolDialogBase.cpp  SpoolDialogBase.h
